--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:dcbapp
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.show-sql=true
+
 
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=brickx;encrypt=true;trustServerCertificate=true;integratedSecurity=true
 spring.datasource.username=INTERSWITCHNG\\Jeremiah.Odunayo
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
