--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ spring.datasource.username=INTERSWITCHNG\\Jeremiah.Odunayo
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 app.jwt-secret= JWTSecretKey
-app.jwt-expiration-milliseconds = 604800000
+app.jwt-expiration-milliseconds = 60000
+#app.jwt-expiration-milliseconds = 604800000
