--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jackson.deserialization.accept-single-value-as-array=true
+
 app.jwt-secret= JWTSecretKey
-app.jwt-expiration-milliseconds = 60000
-#app.jwt-expiration-milliseconds = 604800000
+#app.jwt-expiration-milliseconds = 60000
+app.jwt-expiration-milliseconds = 604800000
