--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jackson.deserialization.accept-single-value-as-array=true
 
-app.jwt-secret= JWTSecretKey
+app.jwt-secret=JWTSecretKey
 #app.jwt-expiration-milliseconds = 60000
-app.jwt-expiration-milliseconds = 604800000
+app.jwt-expiration-milliseconds=604800000
